--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ h1
 form
 {
     background-color: white;
-    max-width: 250px;
+    max-width: 300px;
     text-align: center;
     margin: auto;
     padding: 10px;
@@ -21,6 +21,9 @@ form
 #input_box
 {
     margin-bottom: 10px;
+    height: 25px;
+    border-width: 2px;
+    border-radius: 5px;
 }
 #submit
 {
